# api-queue-manager

./: .env.dev  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  generate_markdown.sh  rust-toolchain.toml  send_requests.sh
api-simulation/: .air.toml  Dockerfile  Dockerfile.dev  Dockerfile.prod  go.mod  main.go
api-simulation/cmd/api-simulation/: main.go
api-simulation/internal/httpserver/: handler.go  rate_limiter.go
api-simulation/pkg/utils/: helpers.go
consumer/: Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.prod  rust-toolchain.toml
consumer/src/: consumer.rs  handler.rs  main.rs
models/: Cargo.toml
models/src/: lib.rs
producer/: Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.prod
producer/src/: handler.rs  main.rs  models.rs  rabbitmq.rs  routes.rs
producer/src/handlers/: delete.rs  post.rs  put.rs
ripi/Issue/clean_up_prod_routes/: description.md
ripi/Issue/clean_up_useless_code_comments/: description.md
ripi/Issue/implement_api_simulation_go/: description.md
ripi/Issue/implement_api_simulation_rate_limit/: description.md
ripi/Issue/implement_consumer_handler/: description.md
ripi/Issue/implement_models_lib/: description.md
ripi/Issue/implement_prod_routes/: description.md
ripi/Issue/implement_producer_request_handler/: description.md
ripi/Issue/integrate_rabbitmq_axum/: description.md
ripi/Issue/integrate_rabbitmq_consumer/: description.md
ripi/Issue/integrate_rabbitmq_prod/: description.md
src/: main.rs  models.rs  rabbitmq.rs  routes.rs
src/handlers/: delete.rs  get.rs  post.rs  put.rs
(+13 files in other folders)
