[package]
name = "consumer"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3.30"
lapin = "2.5.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.39.3", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[[bin]]
name = "consumer"
path = "src/main.rs"
