[package]
name = "producer"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
futures = "0.3.30"
lapin = "2.5.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.39.3", features = ["full"] }
tower = "0.5.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[[bin]]
name = "producer"
path = "src/main.rs"
